--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -6,14 +6,29 @@
 
 .dash-head h2 {
     padding: 15px;
+    display: none;
 }
 
 .main-header-search {
-    margin-left: auto;
+    width: 100%;
+    padding: 15px;
 }
 
 .main-header-search input {
-    margin: 15px;
+    width: 100%;
+}
+
+@media (min-width: 500px) {
+
+
+    .dash-head h2 {
+        display: initial;
+    }
+
+    .main-header-search {
+        margin-left: auto;
+        width: 300px;
+    }
 }
 
 
